--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <title>Hey</title>
 </head>
 <body onload="init()">
-  <canvas id="map" style="width:300px; height: 500px;"></canvas>
+  <div id="map" style="width:300px; height: 500px;"></div>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC09xDhfZSSQwy2-P9x7LAyz7T-TLjNQwo&sensor=false">
   </script>
   <script type="text/javascript">
     function init() {
-      var options = {
-        center: new google.maps.LatLng(41.845831, -87.725830),
-        zoom: 10,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-      }
-      var map = new google.maps.Map(document.getElementById("map"), options)
-      console.log(options, map);
+      var mapOptions = {
+          center: new google.maps.LatLng(-34.397, 150.644),
+          zoom: 8,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("map"),
+            mapOptions);
     }
   </script>
 </body>
